--- a/navbar.html
+++ b/navbar.html
@@ -24,10 +24,10 @@
         <a class="nav-link" href="shop.html">Shop</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="blog.html">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" aria-disabled="true">Client's name</a>
