home quotes modifiee

--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
     <nav
       class="navbar navbar-expand-lg fixed-top navbar-dark-bd-transparent"
     ></nav>
-    <section class="hidden">
-      <div class="homeQuote">
-        <div class="quotes">
-          <h1 class="quote1">Plug into perfection.</h1>
-          <h2 class="quote2">Your gateway to premium audio experiences.</h2>
-        </div>
-        <a href="../shop.html" class="SeeB">
-          <p class="shopNow">See Shop</p>
-        </a>
+    <section class="hidden centered-section">
+      <div class="Qac">
+        <h1>Plug into perfection.</h1>
+      <h2>Your gateway to premium audio experiences.</h2>
+      <button class="shop-button">SHOP</button>
       </div>
     </section>
     <section class="hidden">
