--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     />
   </head>
   <body>
-    
+    <h1>Contact us !</h1>
       </div>
     <nav
       class="navbar navbar-expand-lg fixed-top navbar-dark-bd-transparent"
