--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav
       class="navbar navbar-expand-lg fixed-top navbar-dark-bd-transparent"
     ></nav>
-    <section class="hidden centered-section">
+    <section class="hidden centered-section-quotM">
       <div class="Qac">
         <h1>Plug into perfection.</h1>
       <h2>Your gateway to premium audio experiences.</h2>
@@ -44,16 +44,14 @@
         autoplay
       ></video>
     </section>
-    <section class="hidden">
-      <div class="mainPromo">
+    <section class="hidden centered-section-sony">
+      <div class="promoCasque">
         <div class="promo1">
-          <img src="/img/oli-rl_F5QWZsZ0-unsplash.jpg" alt="Promo 1" />
-          <a href="#" class="shopNbutton">
-            <p class="shopNow">SHOP NOW</p>
-          </a>
+          <button class="shopS-button">SHOP NOW</button>          
         </div>
       </div>
     </section>
+    
     <section class="">
       <h1 class="bestSeller">Bestseller</h1>
       <div class="SideToSideR">
