--- a/index.html
+++ b/index.html
@@ -57,18 +57,26 @@
       <div class="SideToSideR">
         <div class="cartHome">
           <img src="/img/insung-yoon-mru38VH7tII-unsplash.jpg" alt="headset" />
+          <p>New Airpods pro</p>
+          <a href="#" class="bestsellerLinks">Discover</a>
         </div>
         <div class="cartHome">
           <img src="/img/kiran-ck-7KMhZqylgss-unsplash.jpg" alt="headset" />
+          <p>SONY Headset</p>
+          <a href="#" class="bestsellerLinks">Discover</a>
         </div>
         <div class="cartHome">
           <img src="/img/niclas-illg-xVBPy8jwqO4-unsplash.jpg" alt="headset" />
+          <p>JBL Headset</p>
+          <a href="#" class="bestsellerLinks">Discover</a>
         </div>
         <div class="cartHome">
           <img
             src="/img/david-svihovec-HM-Y497t5CU-unsplash.jpg"
             alt="headset"
           />
+          <p>Apple watch</p>
+          <a href="#" class="bestsellerLinks">Discover</a>
         </div>
       </div>
     </section>
