--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <section class="hidden centered-section-quotM">
       <div class="Qac">
         <h1>Plug into perfection.</h1>
-      <h2>Your gateway to premium audio experiences.</h2>
-      <button class="shop-button">SHOP</button>
+        <h2>Your gateway to premium audio experiences.</h2>
+        <button class="shop-button">SHOP</button>
       </div>
     </section>
     <section class="hidden">
@@ -47,37 +47,35 @@
     <section class="hidden centered-section-sony">
       <div class="promoCasque">
         <div class="promo1">
-          <button class="shopS-button">SHOP NOW</button>          
+          <button class="shopS-button">SHOP NOW</button>
         </div>
       </div>
     </section>
-    
-    <section class="">
-      <h1 class="bestSeller">Bestseller</h1>
-      <div class="SideToSideR">
-        <div class="cartHome">
-          <img src="/img/insung-yoon-mru38VH7tII-unsplash.jpg" alt="headset" />
-          <p>New Airpods pro</p>
-          <a href="#" class="bestsellerLinks">Discover</a>
-        </div>
-        <div class="cartHome">
-          <img src="/img/kiran-ck-7KMhZqylgss-unsplash.jpg" alt="headset" />
-          <p>SONY Headset</p>
-          <a href="#" class="bestsellerLinks">Discover</a>
-        </div>
-        <div class="cartHome">
-          <img src="/img/niclas-illg-xVBPy8jwqO4-unsplash.jpg" alt="headset" />
-          <p>JBL Headset</p>
-          <a href="#" class="bestsellerLinks">Discover</a>
-        </div>
-        <div class="cartHome">
-          <img
-            src="/img/david-svihovec-HM-Y497t5CU-unsplash.jpg"
-            alt="headset"
-          />
-          <p>Apple watch</p>
-          <a href="#" class="bestsellerLinks">Discover</a>
-        </div>
+    <h1 class="bestSeller">Bestseller</h1>
+    <section class="bestseller-section">
+      <div class="cartHome">
+        <img src="/img/insung-yoon-mru38VH7tII-unsplash.jpg" alt="headset" />
+        <h2 class="bestsellersNom">Apple watch</h2>
+        <p class="bestsellersDsc"></p>
+        <a href="#" class="bestsellerLinks">Discover</a>
+      </div>
+      <div class="cartHome">
+        <img src="/img/kiran-ck-7KMhZqylgss-unsplash.jpg" alt="headset" />
+        <h2 class="bestsellersNom">Apple watch</h2>
+        <p class="bestsellersDsc"></p>
+        <a href="#" class="bestsellerLinks">Discover</a>
+      </div>
+      <div class="cartHome">
+        <img src="/img/niclas-illg-xVBPy8jwqO4-unsplash.jpg" alt="headset" />
+        <h2 class="bestsellersNom">Apple watch</h2>
+        <p class="bestsellersDsc"></p>
+        <a href="#" class="bestsellerLinks">Discover</a>
+      </div>
+      <div class="cartHome">
+        <img src="/img/david-svihovec-HM-Y497t5CU-unsplash.jpg" alt="headset" />
+        <h2 class="bestsellersNom">Apple watch</h2>
+        <p class="bestsellersDsc"></p>
+        <a href="#" class="bestsellerLinks">Discover</a>
       </div>
     </section>
   </body>
