--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
     />
   </head>
   <body>
-    
+    <H1>Our history</H1>
       </div>
     <nav
       class="navbar navbar-expand-lg fixed-top navbar-dark-bd-transparent"
