--- a/blog.html
+++ b/blog.html
@@ -26,8 +26,8 @@
   <body>
     <H1>Our history</H1>
       </div>
-    <nav
-      class="navbar navbar-expand-lg fixed-top navbar-dark-bd-transparent"
-    ></nav>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark-bd-transparent"></nav>
+      We made our shop in 2019, with the one intent : customer will be happy to buy !<br>
+      
   </body>
 </html>
