--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/CSS/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -54,7 +54,7 @@
     <h1 class="bestSeller">Bestseller</h1>
     <section class="bestseller-section">
       <div class="cartHome">
-        <img src="insung-yoon-mru38VH7tII-unsplash.jpg" alt="headset" />
+        <img src="/img/insung-yoon-mru38VH7tII-unsplash.jpg" alt="headset" />
         <h2 class="bestsellersNom">Apple watch</h2>
         <p class="bestsellersDsc"></p>
         <a href="#" class="bestsellerLinks">Discover</a>
