--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg" href="/img/domainLogoPlugIN.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/navbar.html" />
+    <link rel="stylesheet" href="/CSS/style.css" />
     <title>PlugIN</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -17,17 +18,65 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     />
   </head>
   <body>
-    <H1>Our history</H1>
+    <nav
+      class="navbar navbar-expand-lg fixed-top navbar-dark-bd-transparent"
+    ></nav>
+    <section class="hidden centered-section-quotM">
+      <div class="Qac">
+        <h1>Plug into perfection.</h1>
+        <h2>Your gateway to premium audio experiences.</h2>
+        <button class="shop-button">SHOP</button>
       </div>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark-bd-transparent"></nav>
-      We made our shop in 2019, with the one intent : customer will be happy to buy !<br>
-      
+    </section>
+    <section class="hidden">
+      <video
+        class="promovideo"
+        src="videos/y2mate.com - Headphone 3D Product Advertisement by Aakash_1080p.mp4"
+        loop
+        muted
+        autoplay
+      ></video>
+    </section>
+    <section class="hidden centered-section-sony">
+      <div class="promoCasque">
+        <div class="promo1">
+          <button class="shopS-button">SHOP NOW</button>
+        </div>
+      </div>
+    </section>
+    <h1 class="bestSeller">Bestseller</h1>
+    <section class="bestseller-section">
+      <div class="cartHome">
+        <img src="img/insung-yoon-mru38VH7tII-unsplash.jpg" alt="headset" />
+        <h2 class="bestsellersNom">Apple watch</h2>
+        <p class="bestsellersDsc"></p>
+        <a href="#" class="bestsellerLinks">Discover</a>
+      </div>
+      <div class="cartHome">
+        <img src="img/kiran-ck-7KMhZqylgss-unsplash.jpg" alt="headset" />
+        <h2 class="bestsellersNom">Apple watch</h2>
+        <p class="bestsellersDsc"></p>
+        <a href="#" class="bestsellerLinks">Discover</a>
+      </div>
+      <div class="cartHome">
+        <img src="/img/niclas-illg-xVBPy8jwqO4-unsplash.jpg" alt="headset" />
+        <h2 class="bestsellersNom">Apple watch</h2>
+        <p class="bestsellersDsc"></p>
+        <a href="#" class="bestsellerLinks">Discover</a>
+      </div>
+      <div class="cartHome">
+        <img src="/img/david-svihovec-HM-Y497t5CU-unsplash.jpg" alt="headset" />
+        <h2 class="bestsellersNom">Apple watch</h2>
+        <p class="bestsellersDsc"></p>
+        <a href="#" class="bestsellerLinks">Discover</a>
+      </div>
+    </section>
   </body>
 </html>
